# Search_engine

./: .gitignore  CMakeLists.txt
include/: search.hpp
src/: input_processing.cpp  main.cpp  search.cpp  token_search.cpp  tokenizer.cpp
